# Contests

./: .gitignore  README.md
CSharp/: Contests.sln  Cotests.sln.DotSettings
CSharp/Codeforce/: Codeforce.csproj  Program.cs  Program1.cs
CSharp/Codewars/: Codewars.csproj
CSharp/LeetCode/: Anagrams.cs  CheckBinSearchTree.cs  CheckSubArray.cs  LeetCode.csproj  LongestBraces.cs  LongestPalindrome.cs  Program.cs  Sudoku.cs  ThreeSumClosest.cs  TopKFreq.cs  (+1 more)
Cpp/: CMakeLists.txt  CountPer.h  DeciBinaryPartTask.h  FascinatingNumber.h  GroupAnagrams.h  GroupAnagramsData.h  IsPalindromeListClass.h  IsSubsequence.h  IsomorphicString.h  LongestNonRepeatingSec.h  MatrixHelpers.h  MaxLevelSum.h  MaximumBombs.h  MaximumSplit.h  PascalTriangle.h  PerfBinTree.h  Primes.h  PrimesTest.h  RandomMatrix.h  RansomString.h  RemoveMatching.h  ReversePar.h  RotateImage.h  RptString.h  SearchInRotatedSortedArray.h  SerializeDeserializeBinSearchTree.h  SerializeDeserializeBinTree.h  SetMatrixZeros.h  Shift2DGrid.h  StrictlyPalindromicNumberTask.h  StringsGTD.h  SummaryRangesTask.h  bimap.cpp  bimap.h  bimap2.h  main.cpp  main2.cpp  move_all_zeros.h  t1.h  t2.h
Python/: InsaneTriangle.py  battleship_validator.py  break_pieces.py  calculate_the_expression.py  cheapest_path.py  expression_parser.py  expression_parser_short.py  factorial_tail.py  four_squares.py  four_squares_tests.py  huffman.py  huffman_test.py  main.py  mine_sweeper.py  nth_substring.py  pyvenv.cfg  slide_puzzle.py  slide_puzzle_test.py  square_sums.py  square_sums2.py
SQL/: ActorsFilms.sql  ActorsFilms2.sql  FixData.sql
(+249 files in other folders)
